# Rust-Logging-Servers

./: Cargo.toml  bash_script.sh  container_logs.service  jsondraft.json  package-lock.json  package.json  servers.txt  setup_testing.sh
Logs/: servers.json  servers.txt
misc/: testing_transfer_file_1.txt  testing_transfer_file_2.txt
src/: api_testing.py  central_state.rs  client.rs  constants.rs  datetime.rs  file_info.rs  lib.rs  log_utils.rs  message.rs  message_reader.rs  server.rs
src/old/: main.rs
